test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/patched-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm-1
  namespace: default
  labels: 
    foo: bar
data:
  fookey: fakeval
