test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/update-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789
  namespace: default
type: Opaque
stringData:
  my_key: "my_value"
