test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm-1
  namespace: default
