test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: default
