test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/secret-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789
  namespace: default
