test/conformance/chainsaw/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: trigger-name-exceeds-63-characters
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: secret.yaml
    - assert:
        file: secret-assert.yaml
  - name: step-02
    try:
    - apply:
        file: configmap.yaml
    - assert:
        file: configmap-assert.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: trigger-deployment-restarts
  - name: step-04
    try:
    - apply:
        file: update-secret.yaml
  - name: step-05
    try:
    - assert:
        file: patched-configmap.yaml
